# SMPL

./: CMakeLists.txt  LICENSE  README.md  extract_model_param.py  gitignore.txt
Data/: blend_shapes  smpl_female_joint_regressor.json  smpl_female_kinematic_tree.json  smpl_female_vertices_reshaped.json  smpl_female_weights.json
src/: main.cpp  smpl.cpp  smpl.h
src/utils/: blend_shape_reader.cpp  blend_shape_reader.h  io.h
